--- a/packages/kui-builder/examples/build-configs/default/theme/css/themes/solarized-dark.css
+++ b/packages/kui-builder/examples/build-configs/default/theme/css/themes/solarized-dark.css
@@ -27,10 +27,6 @@ body[kui-theme="Solarized"] {
 
     --color-ui-06: hsla(194, 20%, 20%, 0.8);
 
-    --color-scrollbar-thumb: #081B21;
-    --color-scrollbar-thumb-border: #2E4F5A;
-    --color-scrollbar-thumb-outline: #05303C;
-
     --color-latency-0: #4575b4;
     --color-latency-1: #91bfdb;
     --color-latency-2: #e0f3f8;
